--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3aa8503bdda4789789f6109e1ad37ddad55f2cb0116b3ac6c7fd3789e0960f8e
+-- hash: 4cdc9bdcc72c3e424b98b4b88deb02646d00bc32bc0c1ab57ec9f7af089fbfa3
 
 name:           AdventOfCode2020
 version:        2.0.2.0
@@ -31,6 +31,7 @@ library
       Day02.Parser
       Day02.Solution
       Day02.Utils
+      Day03.Solution
       Template.Solution
   other-modules:
       Paths_AdventOfCode2020
@@ -53,6 +54,7 @@ test-suite AdventOfCode2020-test
       Day02.ParserSpec
       Day02.SolutionSpec
       Day02.UtilsSpec
+      Day03.SolutionSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
   hs-source-dirs:
