Update repo settings
- remove pedantic from readme
- add sample .hspec file
- add -Wall to package.yml

--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,8 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+
     dependencies:
     - AdventOfCode2020
     - hspec-discover
