fix lint warnings

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -38,10 +38,10 @@
 - warn: { name: Use explicit module export list }
 #
 # Replace a $ b $ c with a . b $ c
-- group: { name: dollar, enabled: true }
+# - group: { name: dollar, enabled: true }
 #
 # Generalise map to fmap, ++ to <>
-- group: { name: generalise, enabled: true }
+# - group: { name: generalise, enabled: true }
 # Ignore some builtin hints
 # - ignore: {name: Use let}
 # - ignore: {name: Use const, within: SpecialModule} # Only within certain modules
