--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,10 @@ jobs:
       - run:
           name: Type checks
           command: stack --no-terminal build --pedantic
+          when: always
       - run:
           name: Lint
           command: stack --no-terminal exec hlint  -- --git --report=hlint.html
+          when: always
       - store_artifacts:
           path: hlint.html
