--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 057300c9f33c6f81b93c8f573bf5a4fd87c2a02642e0c5e4cdc804158cc31bbe
+-- hash: 3bbb82bd071c7f973c1e32f8180fdaa94c1d1c3dfc81685d4758fecdac132065
 
 name:           AdventOfCode2020
 version:        2.0.2.0
@@ -39,6 +39,7 @@ library
       Day08.Solution
       Day08.Utils
       Day09.Solution
+      Day09.Utils
       Template.Solution
   other-modules:
       Paths_AdventOfCode2020
@@ -70,6 +71,7 @@ test-suite AdventOfCode2020-test
       Day08.SolutionSpec
       Day08.UtilsSpec
       Day09.SolutionSpec
+      Day09.UtilsSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
   hs-source-dirs:
