--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 911fb313632a85441d2a53c457eac23f567c9dd6fb277c68ddfe60e7f48a166c
+-- hash: 24cbc4fea003cd6fb1589dae73fa50ce21efce6b103444f09e22b4490e9b7ee6
 
 name:           AdventOfCode2020
 version:        2.0.2.0
@@ -41,6 +41,7 @@ library
       Day08.Utils
       Day09.Solution
       Day09.Utils
+      Practice.Foldable
       Template.Solution
   other-modules:
       Paths_AdventOfCode2020
@@ -74,6 +75,7 @@ test-suite AdventOfCode2020-test
       Day08.UtilsSpec
       Day09.SolutionSpec
       Day09.UtilsSpec
+      Practice.FoldableSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
   hs-source-dirs:
