--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -1,18 +1,16 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.2.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: e78ddf6dce2617f27174da65331db5626d485fd819fb44b56027025d2bc6f425
 
 name:           AdventOfCode2020
 version:        2.0.2.0
-description:    Please see the README on GitHub at <https://github.com/bionikspoon/HaskellAdventOfCode2020#readme>
-homepage:       https://github.com/bionikspoon/HaskellAdventOfCode2020#readme
-bug-reports:    https://github.com/bionikspoon/HaskellAdventOfCode2020/issues
+description:    Please see the README on GitHub at <https://github.com/manuphatak/HaskellAdventOfCode2020#readme>
+homepage:       https://github.com/manuphatak/HaskellAdventOfCode2020#readme
+bug-reports:    https://github.com/manuphatak/HaskellAdventOfCode2020/issues
 author:         Manu Phatak
-maintainer:     bionikspoon@gmail.com
+maintainer:     manu@phatak.io
 copyright:      2020 Manu Phatak
 license:        MIT
 license-file:   LICENSE
@@ -23,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/bionikspoon/HaskellAdventOfCode2020
+  location: https://github.com/manuphatak/HaskellAdventOfCode2020
 
 library
   exposed-modules:
