--- a/package.yaml
+++ b/package.yaml
@@ -1,9 +1,9 @@
 name:                AdventOfCode2020
 version:             2.0.2.0
-github:              "bionikspoon/HaskellAdventOfCode2020"
+github:              "manuphatak/HaskellAdventOfCode2020"
 license:             MIT
 author:              "Manu Phatak"
-maintainer:          "bionikspoon@gmail.com"
+maintainer:          "manu@phatak.io"
 copyright:           "2020 Manu Phatak"
 
 extra-source-files:
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/bionikspoon/HaskellAdventOfCode2020#readme>
+description:         Please see the README on GitHub at <https://github.com/manuphatak/HaskellAdventOfCode2020#readme>
 
 dependencies:
 - base >= 4.7 && < 5
