--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -47,6 +47,7 @@ library
       Day16.Solution
       Day16.Utils
       Day17.Solution
+      Day18.Solution
       Practice.Foldable
       Template.Solution
   other-modules:
@@ -88,6 +89,7 @@ test-suite AdventOfCode2020-test
       Day16.SolutionSpec
       Day16.UtilsSpec
       Day17.SolutionSpec
+      Day18.SolutionSpec
       Practice.FoldableSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
