Create drawExpression to create multiline snapshots

--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -47,6 +47,7 @@ library
       Day16.Solution
       Day16.Utils
       Day17.Solution
+      Day18.Internal
       Day18.Solution
       Practice.Foldable
       Template.Solution
