--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -49,6 +49,7 @@ library
       Day17.Solution
       Day18.Internal
       Day18.Solution
+      Day19.Solution
       Practice.Foldable
       Template.Solution
   other-modules:
@@ -91,6 +92,7 @@ test-suite AdventOfCode2020-test
       Day16.UtilsSpec
       Day17.SolutionSpec
       Day18.SolutionSpec
+      Day19.SolutionSpec
       Practice.FoldableSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
