--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -50,6 +50,7 @@ library
       Day17.Solution
       Day18.Internal
       Day18.Solution
+      Day20.Solution
       Practice.Foldable
       Template.Solution
   other-modules:
@@ -93,6 +94,7 @@ test-suite AdventOfCode2020-test
       Day16.UtilsSpec
       Day17.SolutionSpec
       Day18.SolutionSpec
+      Day20.SolutionSpec
       Practice.FoldableSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
