Update hlint rule

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -11,7 +11,14 @@
     - { name: [Data.Set, Data.HashSet], as: Set }
     - { name: [Data.Map, Data.Map.Strict], as: Map }
 
-- error: { lhs: drop 1, rhs: tail }
+- error: { lhs: fit, rhs: it }
+- error: { lhs: xit, rhs: it }
+- error: { lhs: fdescribe, rhs: describe }
+- error: { lhs: xdescribe, rhs: describe }
+- error: { lhs: fcontext, rhs: context }
+- error: { lhs: xcontext, rhs: context }
+- error: { lhs: focus $ a, rhs: a }
+- error: { lhs: focus . a, rhs: a }
 
 - warn: { name: Use explicit module export list }
 
