--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -53,7 +53,6 @@ library
       Day18.Solution
       Day20.Solution
       Day21.Solution
-      Day23.CircularList
       Day23.Solution
       Practice.Foldable
       Template.Solution
@@ -68,6 +67,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , mtl
     , parsec
   default-language: Haskell2010
 
@@ -101,7 +101,6 @@ test-suite AdventOfCode2020-test
       Day18.SolutionSpec
       Day20.SolutionSpec
       Day21.SolutionSpec
-      Day23.CircularListSpec
       Day23.SolutionSpec
       Practice.FoldableSpec
       Template.SolutionSpec
@@ -120,5 +119,6 @@ test-suite AdventOfCode2020-test
     , hspec
     , hspec-discover
     , hspec-golden
+    , mtl
     , parsec
   default-language: Haskell2010
