Work through a couple Arrow tutorials

--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -54,6 +54,7 @@ library
       Day20.Solution
       Day21.Solution
       Practice.ArrowCircuit
+      Practice.ArrowSimpleFunc
       Practice.Foldable
       Template.Solution
   other-modules:
@@ -101,6 +102,7 @@ test-suite AdventOfCode2020-test
       Day20.SolutionSpec
       Day21.SolutionSpec
       Practice.ArrowCircuitSpec
+      Practice.ArrowSimpleFuncSpec
       Practice.FoldableSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
