--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -54,6 +54,7 @@ library
       Day20.Solution
       Day21.Solution
       Practice.Foldable
+      Practice.LensTutorial
       Template.Solution
   other-modules:
       Paths_AdventOfCode2020
@@ -66,6 +67,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , lens
     , parsec
   default-language: Haskell2010
 
@@ -100,6 +102,7 @@ test-suite AdventOfCode2020-test
       Day20.SolutionSpec
       Day21.SolutionSpec
       Practice.FoldableSpec
+      Practice.LensTutorialSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
   hs-source-dirs:
@@ -116,5 +119,6 @@ test-suite AdventOfCode2020-test
     , hspec
     , hspec-discover
     , hspec-golden
+    , lens
     , parsec
   default-language: Haskell2010
