--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -53,6 +53,7 @@ library
       Day18.Solution
       Day20.Solution
       Day21.Solution
+      Day24.Solution
       Practice.Foldable
       Template.Solution
   other-modules:
@@ -99,6 +100,7 @@ test-suite AdventOfCode2020-test
       Day18.SolutionSpec
       Day20.SolutionSpec
       Day21.SolutionSpec
+      Day24.SolutionSpec
       Practice.FoldableSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
