--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -68,6 +68,7 @@ library
       base >=4.7 && <5
     , containers
     , parsec
+    , unordered-containers
   default-language: Haskell2010
 
 test-suite AdventOfCode2020-test
@@ -119,4 +120,5 @@ test-suite AdventOfCode2020-test
     , hspec-discover
     , hspec-golden
     , parsec
+    , unordered-containers
   default-language: Haskell2010
