--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -67,6 +67,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , hashable
     , parsec
     , unordered-containers
   default-language: Haskell2010
@@ -116,6 +117,7 @@ test-suite AdventOfCode2020-test
       AdventOfCode2020
     , base >=4.7 && <5
     , containers
+    , hashable
     , hspec
     , hspec-discover
     , hspec-golden
