--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -53,6 +53,7 @@ library
       Day18.Solution
       Day20.Solution
       Day21.Solution
+      Day24.Solution
       Practice.Foldable
       Template.Solution
   other-modules:
@@ -66,7 +67,9 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , hashable
     , parsec
+    , unordered-containers
   default-language: Haskell2010
 
 test-suite AdventOfCode2020-test
@@ -99,6 +102,7 @@ test-suite AdventOfCode2020-test
       Day18.SolutionSpec
       Day20.SolutionSpec
       Day21.SolutionSpec
+      Day24.SolutionSpec
       Practice.FoldableSpec
       Template.SolutionSpec
       Paths_AdventOfCode2020
@@ -113,8 +117,10 @@ test-suite AdventOfCode2020-test
       AdventOfCode2020
     , base >=4.7 && <5
     , containers
+    , hashable
     , hspec
     , hspec-discover
     , hspec-golden
     , parsec
+    , unordered-containers
   default-language: Haskell2010
