--- a/package.yaml
+++ b/package.yaml
@@ -21,8 +21,10 @@ description:         Please see the README on GitHub at <https://github.com/manu
 
 dependencies:
 - base >= 4.7 && < 5
-- parsec
 - containers
+- hashable
+- parsec
+- unordered-containers
 
 library:
   source-dirs: src
