--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -62,6 +62,7 @@ library
       Paths_AdventOfCode2020
   hs-source-dirs:
       src
+  ghc-options: -Wall -O2
   build-tool-depends:
       hlint:hlint
     , hpc-lcov:hpc-lcov
@@ -112,7 +113,7 @@ test-suite AdventOfCode2020-test
       Paths_AdventOfCode2020
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -O2
   build-tool-depends:
       hlint:hlint
     , hpc-lcov:hpc-lcov
@@ -125,6 +126,28 @@ test-suite AdventOfCode2020-test
     , hspec
     , hspec-discover
     , hspec-golden
+    , parsec
+    , unordered-containers
+  default-language: Haskell2010
+
+benchmark AdventOfCode2020-bench
+  type: exitcode-stdio-1.0
+  main-is: Bench.hs
+  other-modules:
+      Paths_AdventOfCode2020
+  hs-source-dirs:
+      bench
+  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -O2
+  build-tool-depends:
+      hlint:hlint
+    , hpc-lcov:hpc-lcov
+    , implicit-hie:implicit-hie
+  build-depends:
+      AdventOfCode2020
+    , base >=4.7 && <5
+    , containers
+    , criterion
+    , hashable
     , parsec
     , unordered-containers
   default-language: Haskell2010
