--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -112,7 +112,7 @@ test-suite AdventOfCode2020-test
       Paths_AdventOfCode2020
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -O2
   build-tool-depends:
       hlint:hlint
     , hpc-lcov:hpc-lcov
